--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --big-font:3.2rem;
     --medium-font:1.8rem;
     --p-font:0.941rem;
+    --bar-color:hsla(260, 100%, 44%, 0.4);
 
 }
 
@@ -94,4 +95,234 @@ section{
     font-size: var(--p-font);
     font-weight: 400;
     margin: 0.7rem 0 1rem ;
+}
+
+
+/*---------------------Sobre mí------------------*/
+.heading{
+    text-align: center;
+}
+
+.heading h2{
+    font-size: 30px;
+}
+
+.heading span{
+    font-size:var(--p-font);
+    color: rgb(2, 166, 70);
+
+}
+.about-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.about-img{
+    width: 80%;
+    border-radius: 0.5rem;
+}
+
+.about-img img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.about-text{
+    font-size: var(--p-font);
+    font-weight: 400;
+    text-align: justify;
+}
+
+.information{
+    margin: 1rem 0 1.4rem;
+}
+
+.information .info-box{
+    display: flex;
+    align-items: center;
+    margin-bottom:1.4rem ;
+}
+
+.information .info-box .bx{
+    font-size: 22px;
+}
+
+.information .info-box span{
+    font-weight: 400;
+    margin-left: 1rem;
+}
+/*-----------------Skills----------------*/
+.skills-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2rem;
+    margin-top: 4rem;
+}
+
+.skills-img img{
+    width: 100%;
+    padding-left: 1rem;
+    object-position: center;
+}
+
+.bars-box{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:  1rem 0;
+    margin-bottom: 1rem;
+}
+
+.bars-box h3, .bars-box span{
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+
+.light-bar{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.5rem;
+    background: var(--bar-color);
+    border-radius: 0.5rem;
+}
+
+.percent-bar{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 0.5rem;
+    background: var(--main-color);
+    border-radius: 0.5rem;
+}
+
+.html-bar{
+    width: 93%;
+}
+
+.css-bar{
+    width: 80%;
+}
+.js-bar{
+    width: 70%;
+}
+
+.git-bar{
+    width: 80%;
+}
+
+/*----------------Services*/
+.services-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,auto));
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.services-box{
+    padding: 20px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 0.5rem;
+    border-bottom: 2px solid var(--main-color);
+    box-shadow: 0 2px 7px rgba(14, 55, 54, 15%);
+
+}
+
+.services-box .bx{
+    padding-top: 2rem;
+    font-size: 54px;
+    color: var(--main-color);
+}
+
+.services-box h3{
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 0.7rem 0 0.4rem;
+}
+
+.services-box a{
+    color: var(--main-color);
+    font-size: var(--p-font);
+}
+.services-box:hover{
+    background: #02225a;
+    color: #fff;
+}
+
+.services-box .bx:hover{
+    color: #22cf91;
+}
+
+.education-box img{
+    width: 54px;
+    border-radius: 50%;
+}
+
+.education-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,auto));
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem
+}
+
+.education-box{
+    padding: 20px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 0.5rem;
+    border-bottom: 2px solid var(--main-color);
+    box-shadow: 0 2px 7px rgba(14, 55, 54, 15%);
+
+}
+
+.education-box:hover{
+    background: var(--main-color);
+    color: #fff;
+}
+
+.education-box a{
+    color: var(--text-color);
+}
+
+.education-box a:hover{
+    color:#fff
+}
+
+/*---------Portafolio---------*/
+
+.portfilio-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(380px,auto));
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+
+.portfolio-img{
+    overflow: hidden;
+    border-radius: 40px;
+}
+
+.portfolio-img img{
+    width: 100%;
+    display: block;
+}
+
+.portfolio-img img:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
 }
