--- a/style.css
+++ b/style.css
@@ -326,3 +326,73 @@ section{
     transform: scale(1.1);
     transition: 0.3s;
 }
+
+/*-------------formulario contacto-------*/
+
+.contact-form{
+    display: grid;
+    place-items: center;
+    margin-top: 1rem;
+}
+
+.contact-form form{
+    display: flex;
+    flex-direction: column;
+    width:
+    650px;
+}
+
+form input, form textarea{
+    padding: 15px;
+    border-radius: 0.5rem;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: hsla(203, 82%, 34%, 0.4);
+    margin-bottom: 1rem;
+    color: var(--text-color);
+}
+
+form textarea{
+    resize: none;
+    height:200px ;
+}
+
+.contact-button{
+    width: 160px;
+    cursor: pointer;
+    background: #2768d9;
+    color: #fff;
+    justify-content: center;
+    text-transform: uppercase;
+    margin-left: 35%;
+}
+
+.contact-button:hover{
+    background: black;
+}
+/*---------------------------FOOTER*/
+.footer{
+    display: grid;
+    place-items: center;
+    padding: 20px;
+    background: #ebebeb;
+    color: #000;
+}
+
+.footer h2{
+    font-size: 1.5rem;
+    margin-bottom: 1.6rem;
+}
+
+.footer-social a i{
+    color: rgb(11, 18, 94);
+    font-size: 25px;
+    margin-left: 10px;
+    text-align: center;
+    line-height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
